--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇺🇸 美国-10.09MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20719, type: trojan, password: 46ceba76-28b9-37df-8b08-b288e75aa646, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇨🇳 中国-4.11MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30080, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-320.4KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30120, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-164.0KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-3.65MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-2.46MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: fb61d738-ef95-446d-9004-c93a1a975cad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
   - {name: 🇺🇸 美国-3.45MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇨🇳 中国-6.34MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.49MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.21MB/s(Youtube:不良林), server: v125.v2dns.bar, port: 80, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v1252N93nZez6Py, ws-headers: {Host: v125.v2dns.bar}}
+  - {name: 🇬🇧 英国-2.38MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.06MB/s(Youtube:不良林), server: 625tw.ok365.cyou, port: 443, type: trojan, password: 02f61efe-8380-413a-9233-6328ef8997f4, sni: 625tw.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.94MB/s(Youtube:不良林), server: singapore2.shopvpn.net, port: 80, type: vmess, uuid: 77a81e4d-2f3d-4005-857e-4ba60140a539, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: singapore2.shopvpn.net}}
+  - {name: 🇺🇸 美国-2.14MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-318.5KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-10.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-164.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.65MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇺🇸 美国-10.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-164.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.65MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,15 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-10.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-164.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.65MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,30 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇺🇸 美国-10.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-164.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.65MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇺🇸 美国-10.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-164.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.65MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-10.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-164.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.65MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-10.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-164.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.65MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
