--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-10.09MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20719, type: trojan, password: 46ceba76-28b9-37df-8b08-b288e75aa646, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.45MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇫🇷 法国-2.77MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 未知国家-1.04MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
+  - {name: 🇨🇳 中国-498.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: eb2f8154-ff58-3b99-b393-28c8eecdbe64, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-6.34MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.49MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.21MB/s(Youtube:不良林), server: v125.v2dns.bar, port: 80, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v1252N93nZez6Py, ws-headers: {Host: v125.v2dns.bar}}
-  - {name: 🇬🇧 英国-2.38MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.06MB/s(Youtube:不良林), server: 625tw.ok365.cyou, port: 443, type: trojan, password: 02f61efe-8380-413a-9233-6328ef8997f4, sni: 625tw.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.94MB/s(Youtube:不良林), server: singapore2.shopvpn.net, port: 80, type: vmess, uuid: 77a81e4d-2f3d-4005-857e-4ba60140a539, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: singapore2.shopvpn.net}}
-  - {name: 🇺🇸 美国-2.14MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-318.5KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-359.1KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30170, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-939.8KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30170, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-3.06MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-18.75MB/s(Youtube:不良林), server: hkaz4.xmrth-node.xyz, port: 15380, type: vmess, uuid: 30670cc5-0160-3ec8-98d5-606237ec5169, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: hkaz4.xmrth-node.xyz}}
+  - {name: 🇺🇸 美国-622.3KB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-10.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
+      - 未知国家-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-498.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.38MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-318.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-939.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
+      - 🇭🇰 香港-18.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-622.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-10.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
+      - 未知国家-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-498.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.38MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-318.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-939.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
+      - 🇭🇰 香港-18.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-622.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-10.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
+      - 未知国家-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-498.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.38MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-318.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-939.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
+      - 🇭🇰 香港-18.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-622.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-18.75MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-10.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
+      - 未知国家-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-498.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.38MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-318.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-939.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
+      - 🇭🇰 香港-18.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-622.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-10.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
+      - 未知国家-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-498.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.38MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-318.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-939.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
+      - 🇭🇰 香港-18.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-622.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-10.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
+      - 未知国家-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-498.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.38MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-318.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-939.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
+      - 🇭🇰 香港-18.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-622.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-10.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
+      - 未知国家-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-498.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.38MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-318.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-939.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
+      - 🇭🇰 香港-18.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-622.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
