--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-2.77MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 未知国家-1.04MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
-  - {name: 🇨🇳 中国-498.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: eb2f8154-ff58-3b99-b393-28c8eecdbe64, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.34MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-359.1KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30170, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-939.8KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30170, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.06MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-18.75MB/s(Youtube:不良林), server: hkaz4.xmrth-node.xyz, port: 15380, type: vmess, uuid: 30670cc5-0160-3ec8-98d5-606237ec5169, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: hkaz4.xmrth-node.xyz}}
+  - {name: 未知国家-3.66MB/s(Youtube:不良林), server: v125.v2dns.bar, port: 80, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v1252N93nZez6Py, ws-headers: {Host: v125.v2dns.bar}}
+  - {name: 🇨🇳 中国-4.14MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30080, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-656.4KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-622.3KB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-11.43MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20719, type: trojan, password: 46ceba76-28b9-37df-8b08-b288e75aa646, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.15MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.81MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.40MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.28MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.22MB/s(Youtube:不良林), server: 116.129.254.65, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 未知国家-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-939.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇭🇰 香港-18.75MB/s(Youtube:不良林)
+      - 未知国家-3.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-656.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-622.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.81MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 未知国家-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-939.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇭🇰 香港-18.75MB/s(Youtube:不良林)
+      - 未知国家-3.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-656.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-622.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.81MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 未知国家-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-939.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇭🇰 香港-18.75MB/s(Youtube:不良林)
+      - 未知国家-3.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-656.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-622.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.81MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-18.75MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 未知国家-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-939.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇭🇰 香港-18.75MB/s(Youtube:不良林)
+      - 未知国家-3.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-656.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-622.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.81MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 未知国家-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-939.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇭🇰 香港-18.75MB/s(Youtube:不良林)
+      - 未知国家-3.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-656.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-622.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.81MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 未知国家-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-939.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇭🇰 香港-18.75MB/s(Youtube:不良林)
+      - 未知国家-3.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-656.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-622.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.81MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 未知国家-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-939.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇭🇰 香港-18.75MB/s(Youtube:不良林)
+      - 未知国家-3.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-656.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-622.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.81MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
